{
    "version": 1,
    "name": "Act",
    "maps": [
        {
            "name": "Jet",
            "id": "31ef6840-6413-4dee-a012-cc5d7ea17de9",
            "actions": [
                {
                    "name": "ThrottleUp",
                    "type": "Button",
                    "id": "4135512d-5e14-4898-b4fd-66bcf7865681",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleDown",
                    "type": "Button",
                    "id": "e32cee64-abb1-4584-9efa-6bd6717fce5a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleStepUp",
                    "type": "Button",
                    "id": "98535cb5-0fa9-4440-8c05-375cd6b35127",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleStepDown",
                    "type": "Button",
                    "id": "9b347419-aad9-45db-9c70-eb10dadb9b4f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleAB",
                    "type": "Button",
                    "id": "7e83b190-df0f-44a4-9c9f-22998e45bedf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "184a7edb-d082-47df-b1ca-4b84c84dd892",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c31eb9ae-c4ac-4198-b4cc-8a49883a7c5e",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58c35a83-bd8b-48e4-820a-e2551beb5879",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleStepUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "937ee96c-85cf-4cdf-a135-55173e8af43c",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleStepDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "508d115a-11a6-4e2f-a7eb-bc55c67b9ab0",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleAB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}